# medias

./: README.md
projects/TestYuv/: CMakeLists.txt  build.gradle
projects/TestYuv/src/main/: AndroidManifest.xml
projects/TestYuv/src/main/cpp/: main_publisher.c  main_server.cpp
projects/TestYuv/src/main/cpp/include/live555/: ExchangerH264VideoServerMediaSubsession.hpp  ExchangerH265VideoServer.hpp  RTPInterface.hh  RTSPCommon.hh  liveMedia.hh
projects/TestYuv/src/main/java/com/johnsoft/testyuv/: MainActivity.java  MyView.java  YuvConsumer.java
projects/TestYuv/src/main/res/layout/: activity_main.xml
projects/TestYuv/src/main/res/values/: strings.xml
projects/custom/: Android.cmake  AndroidManifest.xml  CMakeLists.txt  Linux.cmake  Macosx.cmake  UnixPC.cmake  build.gradle  install_nginx_rtmp.sh  reloc_rpath.sh
projects/custom/data/: See_you_again.aac  test.265
projects/custom/ffmpeg/: build_pc.sh
projects/custom/ffmpeg/include/libavutil/: ffversion.h
projects/custom/ffmpeg/lib/: libavdevice.57.10.100.dylib  libavdevice.57.dylib  libavdevice.dylib  libavfilter.6.dylib  libavfilter.dylib  libavformat.57.83.100.dylib  libavformat.57.dylib  libavutil.55.78.100.dylib  libavutil.55.dylib  libavutil.dylib  libpostproc.54.7.100.dylib  libswresample.2.9.100.dylib  libswresample.2.dylib  libswresample.dylib  libswscale.4.8.100.dylib  libswscale.4.dylib
projects/custom/ffmpeg/lib/linux/: libavdevice.so.57.10.100  libavutil.so.55.78.100  libpostproc.so.54.7.100  libswresample.so.2.9.100  libswscale.so.4.8.100
projects/custom/ffmpeg/lib/macosx/: libavfilter.6.107.100.dylib  libswscale.4.8.100.dylib
projects/custom/librtmp/: .gitignore  Makefile.android  Makefile.macosx  Readme.txt  rtmp_sys.h
projects/custom/libvpx/: Readme.txt
projects/custom/live555/include/: ExchangerDeviceSource.hpp  ExchangerH264VideoServer.hpp  common.h
projects/custom/live555/lib/: liblive555.dylib
projects/custom/opencv/: build_pc.sh
projects/custom/opencv/include_linux/opencv2/: cvconfig.h
projects/custom/opencv/include_macosx/opencv2/: cvconfig.h
projects/custom/opencv/lib/: libopencv_flann.3.3.dylib  libopencv_highgui.dylib  libopencv_imgcodecs.dylib  libopencv_ml.dylib  libopencv_objdetect.3.3.dylib  libopencv_photo.dylib  libopencv_shape.dylib  libopencv_stitching.3.3.dylib  libopencv_video.3.3.dylib  libopencv_videostab.3.3.0.dylib
projects/custom/opencv/lib/linux/: libopencv_calib3d.so.3.3.0  libopencv_features2d.so.3.3.0  libopencv_flann.so.3.3.0  libopencv_highgui.so.3.3.0  libopencv_ml.so.3.3.0  libopencv_shape.so.3.3.0  libopencv_stitching.so.3.3.0  libopencv_superres.so.3.3.0  libopencv_videoio.so.3.3.0  libopencv_videostab.so.3.3.0
projects/custom/opencv/lib/macosx/: libopencv_calib3d.3.3.0.dylib  libopencv_dnn.3.3.0.dylib  libopencv_features2d.3.3.0.dylib  libopencv_superres.3.3.0.dylib  libopencv_videoio.3.3.0.dylib
projects/custom/sdl/: Readme.txt
projects/custom/sdl/include/SDL2/: SDL_config.h
projects/custom/sdl/include_linux/SDL2/: SDL_config.h
projects/custom/sdl/include_macosx/SDL2/: SDL_config.h
projects/custom/sdl/jniInclude/SDL2/: SDL_config.h
projects/custom/sdl/lib/: libSDL2.dylib  libSDL2d.dylib
projects/custom/sdl/lib/macosx/: libSDL2-2.0.0.dylib
projects/custom/src/john_collections/: john_object_pool.c  john_object_pool.h  john_queue.c  john_queue.h  john_ring_buffer.c  john_ring_buffer.h  john_stack.c  john_stack.h  john_sync_ring_buffer.c  john_sync_ring_buffer.h  john_synchronized_queue.c  john_synchronized_queue.h
projects/custom/src/others/: freq_opencv.cpp  pcm_proc_test.cpp  xshell.c
projects/custom/src/rtsp/: ExchangerH264VideoServerMediaSubsession.cpp  ExchangerH264VideoServerMediaSubsession.hpp  common.h  main_client.cpp  main_rtmp.c  main_server.cpp  rtmp_publisher.c  rtsp_ffmpeg_client.c  rtsp_ffmpeg_client.h  sps_decode.h  x264_stream.c  x264_stream.h
projects/custom/src/stream_media/: base_path.h  ff_trans_enc_client.c  ffmpeg_base_client.c  ffmpeg_base_client.h  ffmpeg_url_client.c  ffmpeg_url_client.h  main_client.cpp  main_rtmp_publisher.c  main_rtsp_server.cpp  rtmp_publisher.c  rtmp_publisher.h  sps_decode.h  trace_malloc_free.c  trace_malloc_free.h  x264_stream.c  x264_stream.h  x265_stream.c  x265_stream.h
projects/custom/src/udp/: main.cpp  udp_trans.c  udp_trans.h
projects/custom/x264/: Readme.txt
projects/custom/x264/lib/: libx264.152.dylib
projects/custom/x265/: Readme.txt
projects/custom/x265/include/: x265_config.h
projects/custom/x265/lib/: libx265.dylib
projects/live555src/: .gitignore  CMakeLists.txt
projects/live555src/BasicUsageEnvironment/: Makefile
projects/live555src/UsageEnvironment/: Makefile  Makefile.head
projects/live555src/groupsock/: Makefile  Makefile.head
projects/live555src/liveMedia/: ExchangerDeviceSource.cpp  ExchangerH264VideoServerMediaSubsession.cpp  ExchangerH265VideoServerMediaSubsession.cpp  FramedSource.cpp  H264or5VideoStreamFramer.cpp  MPEG4VideoStreamFramer.cpp  MPEGVideoStreamFramer.cpp  Makefile  Makefile.head  MediaSession.cpp  MediaSink.cpp  ProxyServerMediaSession.cpp  RTPInterface.cpp  RTSPServer.cpp
projects/live555src/liveMedia/include/: ExchangerH265VideoServerMediaSubsession.hpp  MPEGVideoStreamFramer.hh  common.h
projects/live555src/mediaServer/: Makefile  Makefile.tail
projects/live555src/proxyServer/: Makefile  Makefile.tail
projects/live555src/testProgs/: Makefile  Makefile.tail  testOnDemandRTSPServer.cpp
